{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 661,
  "lineage": "be692081-443f-8928-a7e8-dc3510485b5f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/frontendIPConfigurations/public-ip-config-tf-wt-app",
                "inbound_nat_rules": [
                  "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-0",
                  "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-1",
                  "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-2"
                ],
                "load_balancer_rules": [
                  "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/loadBalancingRules/lb-rule"
                ],
                "name": "public-ip-config-tf-wt-app",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/publicIPAddresses/lb-public-ip"
              }
            ],
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app",
            "location": "eastus",
            "name": "lb-tf-wt-app",
            "resource_group_name": "rg-tf",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/backendAddressPools/lb-bepool-tf-wt-app",
            "load_balancing_rules": [
              "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/loadBalancingRules/lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app",
            "name": "lb-bepool-tf-wt-app"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "tf-lb-bepool-addr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/backendAddressPools/lb-bepool-tf-wt-app",
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/backendAddressPools/lb-bepool-tf-wt-app/addresses/lb-bepool-address-0",
            "ip_address": "10.0.0.38",
            "name": "lb-bepool-address-0",
            "virtual_network_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_lb_backend_address_pool.tf",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/backendAddressPools/lb-bepool-tf-wt-app",
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/backendAddressPools/lb-bepool-tf-wt-app/addresses/lb-bepool-address-1",
            "ip_address": "10.0.0.37",
            "name": "lb-bepool-address-1",
            "virtual_network_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_lb_backend_address_pool.tf",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/backendAddressPools/lb-bepool-tf-wt-app",
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/backendAddressPools/lb-bepool-tf-wt-app/addresses/lb-bepool-address-2",
            "ip_address": "10.0.0.36",
            "name": "lb-bepool-address-2",
            "virtual_network_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_lb_backend_address_pool.tf",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "tf-lb-nat-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-0-nic/ipConfigurations/app-vm-0-nic",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/frontendIPConfigurations/public-ip-config-tf-wt-app",
            "frontend_ip_configuration_name": "public-ip-config-tf-wt-app",
            "frontend_port": 200,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-0",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app",
            "name": "lb-nat-ssh-0",
            "protocol": "Tcp",
            "resource_group_name": "rg-tf"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-1-nic/ipConfigurations/app-vm-1-nic",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/frontendIPConfigurations/public-ip-config-tf-wt-app",
            "frontend_ip_configuration_name": "public-ip-config-tf-wt-app",
            "frontend_port": 201,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-1",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app",
            "name": "lb-nat-ssh-1",
            "protocol": "Tcp",
            "resource_group_name": "rg-tf"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-2-nic/ipConfigurations/app-vm-2-nic",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/frontendIPConfigurations/public-ip-config-tf-wt-app",
            "frontend_ip_configuration_name": "public-ip-config-tf-wt-app",
            "frontend_port": 202,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-2",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app",
            "name": "lb-nat-ssh-2",
            "protocol": "Tcp",
            "resource_group_name": "rg-tf"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "tf-lb-health-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/probes/lb-health-probe-tf-wt-app",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/loadBalancingRules/lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app",
            "name": "lb-health-probe-tf-wt-app",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/backendAddressPools/lb-bepool-tf-wt-app"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/frontendIPConfigurations/public-ip-config-tf-wt-app",
            "frontend_ip_configuration_name": "public-ip-config-tf-wt-app",
            "frontend_port": 8080,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/loadBalancingRules/lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app",
            "name": "lb-rule",
            "probe_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/probes/lb-health-probe-tf-wt-app",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_lb_backend_address_pool.tf",
            "azurerm_lb_probe.tf-lb-health-probe",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-0-nic",
            "internal_domain_name_suffix": "0jngb0htvmhulfdom4dvbxp5zf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-vm-0-nic",
                "primary": true,
                "private_ip_address": "10.0.0.38",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/public-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-99-F9-38",
            "name": "app-vm-0-nic",
            "private_ip_address": "10.0.0.38",
            "private_ip_addresses": [
              "10.0.0.38"
            ],
            "resource_group_name": "rg-tf",
            "virtual_machine_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Compute/virtualMachines/vm-0-tf-wt-app"
          },
          "dependencies": [
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-1-nic",
            "internal_domain_name_suffix": "0jngb0htvmhulfdom4dvbxp5zf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-vm-1-nic",
                "primary": true,
                "private_ip_address": "10.0.0.37",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/public-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9B-22-59",
            "name": "app-vm-1-nic",
            "private_ip_address": "10.0.0.37",
            "private_ip_addresses": [
              "10.0.0.37"
            ],
            "resource_group_name": "rg-tf",
            "virtual_machine_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Compute/virtualMachines/vm-1-tf-wt-app"
          },
          "dependencies": [
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-2-nic",
            "internal_domain_name_suffix": "0jngb0htvmhulfdom4dvbxp5zf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-vm-2-nic",
                "primary": true,
                "private_ip_address": "10.0.0.36",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/public-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9B-28-CC",
            "name": "app-vm-2-nic",
            "private_ip_address": "10.0.0.36",
            "private_ip_addresses": [
              "10.0.0.36"
            ],
            "resource_group_name": "rg-tf",
            "virtual_machine_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Compute/virtualMachines/vm-2-tf-wt-app"
          },
          "dependencies": [
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-nic-postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-postgres-nic",
            "internal_domain_name_suffix": "0jngb0htvmhulfdom4dvbxp5zf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-vm-postgres-nic",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/private-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-1F-EF-08",
            "name": "app-vm-postgres-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-tf",
            "virtual_machine_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Compute/virtualMachines/vm-postgres"
          },
          "dependencies": [
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-private-subnet",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "tf-lb-nat-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-0-nic/ipConfigurations/app-vm-0-nic|/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-0",
            "ip_configuration_name": "app-vm-0-nic",
            "nat_rule_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-0",
            "network_interface_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-0-nic"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_lb_nat_rule.tf-lb-nat-rule",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-1-nic/ipConfigurations/app-vm-1-nic|/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-1",
            "ip_configuration_name": "app-vm-1-nic",
            "nat_rule_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-1",
            "network_interface_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-1-nic"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_lb_nat_rule.tf-lb-nat-rule",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-2-nic/ipConfigurations/app-vm-2-nic|/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-2",
            "ip_configuration_name": "app-vm-2-nic",
            "nat_rule_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/loadBalancers/lb-tf-wt-app/inboundNatRules/lb-nat-ssh-2",
            "network_interface_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkInterfaces/app-vm-2-nic"
          },
          "dependencies": [
            "azurerm_lb.tf",
            "azurerm_lb_nat_rule.tf-lb-nat-rule",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.tf",
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-private-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "location": "eastus",
            "name": "private-nsg",
            "resource_group_name": "rg-tf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "AllowPostgres",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowPostgresInBound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.32/27",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "AllowSSH",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHInBound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.32/27",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Deny all ports",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAll",
                "priority": 500,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-public-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "location": "eastus",
            "name": "public-nsg",
            "resource_group_name": "rg-tf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "AllowSSH",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHInBound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "AllowWebapp",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowWebAppInBound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Deny all ports",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAll",
                "priority": 510,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/publicIPAddresses/lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.124.137",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lb-public-ip",
            "resource_group_name": "rg-tf",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-postgres-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.64/28"
            ],
            "delegation": [
              {
                "name": "fs",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/postgres-subnet",
            "name": "postgres-subnet",
            "resource_group_name": "rg-tf",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-tf"
          },
          "dependencies": [
            "azurerm_resource_group.tf",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/private-subnet",
            "name": "private-subnet",
            "resource_group_name": "rg-tf",
            "virtual_network_name": "vnet-tf"
          },
          "dependencies": [
            "azurerm_resource_group.tf",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-pulic-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.32/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/public-subnet",
            "name": "public-subnet",
            "resource_group_name": "rg-tf",
            "virtual_network_name": "vnet-tf"
          },
          "dependencies": [
            "azurerm_resource_group.tf",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-private-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/private-subnet",
            "network_security_group_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "subnet_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/private-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-private-nsg",
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-private-subnet",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-public-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/public-subnet",
            "network_security_group_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "subnet_id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/public-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-public-nsg",
            "azurerm_resource_group.tf",
            "azurerm_subnet.tf-pulic-subnet",
            "azurerm_virtual_network.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e8605ad2-abf3-450f-946e-678750ddffcd",
            "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf",
            "location": "eastus",
            "name": "vnet-tf",
            "resource_group_name": "rg-tf",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/27",
                "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/private-subnet",
                "name": "private-subnet",
                "security_group": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkSecurityGroups/private-nsg"
              },
              {
                "address_prefix": "10.0.0.32/27",
                "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/public-subnet",
                "name": "public-subnet",
                "security_group": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkSecurityGroups/public-nsg"
              },
              {
                "address_prefix": "10.0.0.64/28",
                "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/postgres-subnet",
                "name": "postgres-subnet"
              },
              {
                "address_prefix": "10.0.0.80/28",
                "id": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/free-subnet",
                "name": "free-subnet",
                "security_group": "/subscriptions/85ba23e3-1754-41e4-952c-b2d1c4e400a3/resourceGroups/rg-tf/providers/Microsoft.Network/networkSecurityGroups/vm-man-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.tf"
          ]
        }
      ]
    }
  ]
}